Updated code to work on vlab's vm